# Smart-Campus

./: CMakeLists.txt  campusinitializer.cpp  campusinitializer.h  campusinitializer.ui  main.cpp
.github/workflows/: android-app.yml  ci.yml
ClassroomManager/: CMakeLists.txt  PlatformAdaptation.h
Core/: CMakeLists.txt  CampusCoreServer.cpp  CampusCoreServer.h  PlatformAdaptation.h
RoomFunctionDisplay/: CMakeLists.txt  PlatformAdaptation.h
TeacherWorkbench/: CMakeLists.txt  PlatformAdaptation.h
common/: CMakeLists.txt  JsonProtocolExamples.txt  NetworkManager.cpp  NetworkManager.h  PlatformDeviceIdExample.cpp  ThreadSafeConnectionExample.cpp
